[package]
name = "threema-gateway"
version = "0.18.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
documentation = "https://docs.rs/threema-gateway"
repository = "https://github.com/dbrgn/threema-gateway-rs"
license = "MIT OR Apache-2.0"
description = "A client library for the Threema Gateway."
readme = "README.md"
keywords = ["threema", "end-to-end", "e2e", "e2ee", "gateway"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2024"

[features]
default = ["receive"]
receive = ["form_urlencoded", "serde_urlencoded"] # Support for receiving and decrypting incoming messages

[dependencies]
byteorder = "1.0"
crypto_box = "0.9.1"
crypto_secretbox = "0.1.1"
data-encoding = "2.1"
form_urlencoded = { version = "1", optional = true }
hmac = "0.12.1"
log = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "multipart", "json"], default-features = false }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = { version = "0.7", optional = true }
sha2 = "0.10.8"
thiserror = "2"
url = "2.5.4"
zeroize = { version = "1", features = ["zeroize_derive"], default-features = false }

[dev-dependencies]
docopt = "1.1.0"
mime_guess = "2.0.0"
tokio = { version = "1", features = ["macros", "rt"], default-features = false }
tokio-test = "0.4"

[lints.rust]
missing_docs = "deny"
